--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <main>
             <div class="cols">
                 <div class="logocol">
-                    <div>MADE<br>&nbsp;INSPACE</div>
+                    <div>🪐MADE<br>&nbsp;INSPACE🛰</div>
                 </div>
                 <div class="signupcol">
                     <h1 class="invitation">This is not a real online service.<br>
