Fixed minor bugs, added emoji for Windows,added entrance animations

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <main>
             <div class="cols">
                 <div class="logocol">
-                    <div>🪐MADE<br>&nbsp;INSPACE🛰</div>
+                    <div>🪐MADE<br><span id="logodown">INSPACE🛰</span></div>
                 </div>
                 <div class="signupcol">
                     <h1 class="invitation">This is not a real online service.<br>
@@ -70,7 +70,7 @@
                                 </div>
                             </fieldset>
                         </div>
-                        <button type="submit">Create Account</button>
+                        <div id="registerbutton"><button type="submit">Create Account</button></div>
                     </form>
                     <div class="login">
                         Already have an account? <a href="">Log in</a>
