added additional digit for phone number, now 9 or 10 digits

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                     </div>
                                 </div>
                                 <div>
-                                    <input type="phone" name="phone" id="phoneform" pattern="^(\+\d{1,2})?\(?\d{3}\)?[\s.-]?\d{3}[\s.-]?\d{3}$" placeholder=" " required>
+                                    <input type="tel" name="phone" id="phoneform" pattern="^(\+\d{1,2})?\(?\d{3}\)?[\s.-]?\d{3}[\s.-]?\d{3,4}$"  placeholder=" " required>
                                     <label for="phoneform">Phone Number</label>
                                     <div class="requirements">
                                         Enter a valid phone number with "+" simbol and region code, plus nine digits.
