--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
+        <script type="text/javascript" src="warpspeed.min.js"></script>
     </head>
     <body>
         <main>
+            <div class="bg">
+                <canvas id="canvas"></canvas>
+                <script type="text/javascript">new WarpSpeed("canvas",{"speed":5,"speedAdjFactor":0.05,"density":3,"shape":"circle","warpEffect":true,"warpEffectLength":5,"depthFade":true,"starSize":3,"backgroundColor":"rgba(0,0,0,1)","starColor":"#FFFFFF"});</script>
+            </div>
             <div class="cols">
                 <div class="logocol">
                     <div>🪐MADE<br><span id="logodown">INSPACE🛰</span></div>
@@ -44,7 +49,7 @@
                                     </div>
                                 </div>
                                 <div>
-                                    <input type="tel" name="phone" id="phoneform" pattern="^(\+\d{1,2})?\(?\d{3}\)?[\s.-]?\d{3}[\s.-]?\d{3,4}$"  placeholder=" " required>
+                                    <input type="" name="phone" id="phoneform" pattern="^(\+\d{1,2})?\(?\d{3}\)?[\s.-]?\d{3}[\s.-]?\d{3,4}$"  placeholder=" " required>
                                     <label for="phoneform">Phone Number</label>
                                     <div class="requirements">
                                         Enter a valid phone number with "+" simbol and region code, plus nine digits.
@@ -77,7 +82,7 @@
                     </div>
                 </div>
             </div>
-            <footer>Created by Adrián Bravo, <a href="mailto:adrianbravomr@gmail.com">adrianbravomr@gmail.com</a>, <a href="https://github.com/adrianbravomr/signupform">Source Code</a>. Background by <a href="https://unsplash.com/photos/LyiuOfvh_8Y">Daniele Levis</a></footer>
+            <footer>Created by Adrián Bravo, <a href="mailto:adrianbravomr@gmail.com">adrianbravomr@gmail.com</a>, <a href="https://github.com/adrianbravomr/signupform">Source Code</a>. Background by <a href="https://unsplash.com/photos/LyiuOfvh_8Y">Daniele Levis</a>, Warp Effect by <a href="https://github.com/adolfintel/warpspeed">Federico Dossena</a> </footer>
         </main>
         <script src="scripts.js" async defer></script>
     </body>
